syntax = "proto3";
package proto;

import "google/protobuf/struct.proto";

option go_package = "github.com/veraison/services/proto";

message EvidenceContext {
  string tenant_id = 1 [json_name = "tenant-id"];
  repeated string trust_anchor_ids = 2 [json_name = "trust-anchor-ids"];
  repeated string reference_ids = 3 [json_name = "reference-ids"];
  google.protobuf.Struct evidence = 5;
}
