syntax = "proto3";
package proto;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/veraison/services/proto";

// Note: tier values have been chosen to be aligned with sourced-data definition of
// https://datatracker.ietf.org/doc/draft-ietf-rats-ar4si/
enum TrustTier {
    NONE = 0;
    AFFIRMING = 2;
    WARNING = 32;
    CONTRAINDICATED = 96;
}

message TrustVector {
    sint32 instance_identity = 1 [json_name = "instance-identity"];
    sint32 configuration = 2 [json_name = "configuration"];
    sint32 executables = 3 [json_name = "executables"];
    sint32 file_system = 4 [json_name = "file-system"];
    sint32 hardware = 5 [json_name = "hardware"];
    sint32 runtime_opaque = 6 [json_name = "runtime-opaque"];
    sint32 storage_opaque = 7 [json_name = "storage-opaque"];
    sint32 sourced_data = 8 [json_name = "sourced-data"];
}

message EndorsedClaims {
    google.protobuf.Struct hardware_details = 1 [json_name = "hw-details"];
    google.protobuf.Struct software_details = 2 [json_name = "sw-details"];
    google.protobuf.Struct certification_details = 3 [json_name = "certification-details"];
    google.protobuf.Struct config_details = 4 [json_name = "config-details"];
}

message AttestationResult {
    TrustTier status = 1 [json_name = "status"];
    TrustVector trust_vector = 2 [json_name = "trust-vector"];
    bytes raw_evidence = 3 [json_name = "raw-evidence"];
    google.protobuf.Timestamp timestamp = 4 [json_name = "timestamp"];
    EndorsedClaims endorsed_claims = 5 [json_name = "endorsed-claims"];
    string AppraisalPolicyID = 6 [json_name = "appraisal-policy-id"];
    int32 AppraisalPolicyVersion = 7 [json_name = "appraisal-policy-version"];

    // Extension
    google.protobuf.Struct processed_evidence = 8 [json_name = "veraison-processed-evidence"];
    google.protobuf.Struct verifier_added_claims = 9 [json_name = "veraison-verifier-added-claims"];
}

// vim: set et sts=4 sw=4 ai:
